Regression on m4a
This m4a file, upload on streams.videolan.org :
Dillon_Francis_DJ_Snake_Get_Low_medium.m4a
can be played in 2.1.4 (Ubuntu) but not in 2.2.0 git.
http://streams.videolan.org/issues/11746/Dillon_Francis_DJ_Snake_Get_Low_medium.m4a
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Author Contributor
Well... I will upload the file when streams.videolan.org wil be online... sorry...
- Rémi Denis-Courmont added Status::needs more info label
added Status::needs more info label
- Rémi Denis-Courmont closed
closed
- Owner
I got the file. Bug confirmed.
- Jean-Baptiste Kempf removed Status::needs more info label
removed Status::needs more info label
- Jean-Baptiste Kempf reopened
reopened
- Owner
Ping me on IRC if you want it :)
- Jean-Baptiste Kempf changed the description
changed the description
- Jean-Baptiste Kempf changed title from m4a : possible regression to Regression on m4a
changed title from m4a : possible regression to Regression on m4a
- Jean-Baptiste Kempf assigned to @fcartegnie
assigned to @fcartegnie
- Owner
This works with libavformat
- Developer
Fragmented mp4 problem, was going through avdemux before.
- Owner
Do we have a possible fix?
- Developer
fragments seems correct for now.
[00007f4ca0c01848] mp4 demux debug: found 1 tracks [00007f4ca0c01848] mp4 demux warning: no chunk defined [00007f4ca0c01848] mp4 demux debug: track[Id 0x1] read 0 chunk [00007f4ca0c01848] mp4 demux warning: STTS table of 0 entries [00007f4ca0c01848] mp4 demux debug: track[Id 0x1] read 0 samples length:0s [00007f4ca0c01848] mp4 demux debug: adding track[Id 0x1] audio (enable) language undef [00007f4ca0c01848] mp4 demux debug: fragment offset 24, data 0<->0, duration 212648185 [00007f4ca0c01848] mp4 demux debug: fragment offset 888, data 4440<->161730, duration 10007165 [00007f4ca0c01848] mp4 demux debug: fragment offset 161722, data 165274<->322562, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 322554, data 326098<->482891, duration 9983900 [00007f4ca0c01848] mp4 demux debug: fragment offset 482883, data 486435<->643415, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 643407, data 646959<->803962, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 803954, data 807498<->964421, duration 9983945 [00007f4ca0c01848] mp4 demux debug: fragment offset 964413, data 967965<->1125119, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 1125111, data 1128663<->1285752, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 1285744, data 1289288<->1446181, duration 9983945 [00007f4ca0c01848] mp4 demux debug: fragment offset 1446173, data 1449725<->1606597, duration 10007165 [00007f4ca0c01848] mp4 demux debug: fragment offset 1606589, data 1610141<->1767088, duration 10007120 [00007f4ca0c01848] mp4 demux debug: fragment offset 1767080, data 1770624<->1927480, duration 9983922 [00007f4ca0c01848] mp4 demux debug: fragment offset 1927472, data 1931024<->2088074, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 2088066, data 2091618<->2248819, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 2248811, data 2252355<->2409138, duration 9983945 [00007f4ca0c01848] mp4 demux debug: fragment offset 2409130, data 2412682<->2569817, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 2569809, data 2573361<->2730439, duration 10007165 [00007f4ca0c01848] mp4 demux debug: fragment offset 2730431, data 2733975<->2890826, duration 9983922 [00007f4ca0c01848] mp4 demux debug: fragment offset 2890818, data 2894370<->3051446, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 3051438, data 3054990<->3211997, duration 10007142 [00007f4ca0c01848] mp4 demux debug: fragment offset 3211989, data 3215533<->3372375, duration 9983922 [00007f4ca0c01848] mp4 demux debug: fragment offset 3372367, data 3373383<->3414539, duration 2646916
- Developer
Fragments guess offsetted by an 8 bytes offset. Have to figure out.
- Developer
problem is with handling of the MP4_TFHD_DEFAULT_BASE_IS_MOOF flag / DASH file.
setting base offset to atom itself at line 4543 might solve the problem. i_traf_base_data_offset = p_new->p_moox->i_pos /+ 8/;
- Developer
commit 4fe0751b Author: Francois Cartegnie fcvlcdev@free.fr Date: Thu Aug 14 17:38:45 2014 +0900
demux: mp4: point to atom's position of base offset is moov (fix [#11746](https://code.videolan.org/videolan/vlc/-/issues/11746)) Not so common flags, lack of samples. Unsure if it doesn't break something else.
- François Cartegnie added Status::fixed label
added Status::fixed label
- François Cartegnie closed
closed