demux: mp4: point to atom's position of base offset is moov (fix #11746)

Not so common flags, lack of samples.
Unsure if it doesn't break something else.